OnboardingHub/force-app/main/default/objects/New_Hire__c/New_Hire__c.object-meta.xml
<CustomObject>
    <label>New Hire</label>
    <pluralLabel>New Hires</pluralLabel>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>