OnboardingHub/force-app/main/default/objects/New_Hire__c/fields/Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percent__c</fullName>
    <label>Completion %</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Percentage of onboarding tasks completed. Maintained by the roll-up trigger.</description>
</CustomField>