OnboardingHub/force-app/main/default/objects/New_Hire__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>New Hires</relationshipLabel>
    <relationshipName>New_Hires</relationshipName>
</CustomField>